# help
install_data(
  [
  'C/contents_motif.gif',
  'C/grisbi-manuel.html',
  'C/next_motif.gif',
  'C/previous_motif.gif',
  'C/quickstart.html',
  'C/topic.dat',
  'C/translation.html',
  ],
  install_dir : 'share/doc/grisbi/C'
  )

install_data(
  [
  'de/grisbi-manuel.css',
  'de/grisbi-manuel.html',
  'de/grisbi-manuel.pdf',
  'de/quickstart.html',
  ],
  install_dir : 'share/doc/grisbi/de'
  )

install_data(
  [
  'fr/contents_motif.gif',
  'fr/grisbi-manuel001.html',
  'fr/grisbi-manuel002.html',
  'fr/grisbi-manuel003.html',
  'fr/grisbi-manuel004.html',
  'fr/grisbi-manuel005.html',
  'fr/grisbi-manuel006.html',
  'fr/grisbi-manuel007.html',
  'fr/grisbi-manuel008.html',
  'fr/grisbi-manuel009.html',
  'fr/grisbi-manuel010.html',
  'fr/grisbi-manuel011.html',
  'fr/grisbi-manuel012.html',
  'fr/grisbi-manuel013.html',
  'fr/grisbi-manuel014.html',
  'fr/grisbi-manuel015.html',
  'fr/grisbi-manuel016.html',
  'fr/grisbi-manuel017.html',
  'fr/grisbi-manuel018.html',
  'fr/grisbi-manuel019.html',
  'fr/grisbi-manuel020.html',
  'fr/grisbi-manuel021.html',
  'fr/grisbi-manuel022.html',
  'fr/grisbi-manuel023.html',
  'fr/grisbi-manuel024.html',
  'fr/grisbi-manuel025.html',
  'fr/grisbi-manuel-1page.html',
  'fr/grisbi-manuel.css',
  'fr/grisbi-manuel.html',
  'fr/grisbi-manuel.pdf',
  'fr/index.html',
  'fr/next_motif.gif',
  'fr/previous_motif.gif',
  'fr/quickstart.html',
  'fr/topic.dat',
  'fr/translation.html',
  ],
  install_dir : 'share/doc/grisbi/fr'
  )

install_data(
  'fr/image/manuel-logo.png',
  install_dir : 'share/doc/grisbi/fr/image'
  )

install_data(
  [
  'fr/image/icon/comments.png',
  'fr/image/icon/contents_motif.gif',
  'fr/image/icon/display_1line.png',
  'fr/image/icon/display_2lines.png',
  'fr/image/icon/display_3lines.png',
  'fr/image/icon/display_4lines.png',
  'fr/image/icon/display_large.png',
  'fr/image/icon/display_medium.png',
  'fr/image/icon/display_small.png',
  'fr/image/icon/form_open.png',
  'fr/image/icon/next_motif.gif',
  'fr/image/icon/previous_motif.gif',
  'fr/image/icon/properties.png',
  'fr/image/icon/rec_mask.png',
  'fr/image/icon/rec_show.png',
  'fr/image/icon/transactions.png',
  'fr/image/icon/tree_1branch.png',
  'fr/image/icon/tree_2branch.png',
  'fr/image/icon/tree_3branch.png',
  'fr/image/icon/tree_close.png',
  ],
  install_dir : 'share/doc/grisbi/fr/image/icon'
  )

install_data(
  [
  'fr/image/screenshot/account_new_creation.png',
  'fr/image/screenshot/account_new_name.png',
  'fr/image/screenshot/account_new_properties.png',
  'fr/image/screenshot/asso_account_creation.png',
  'fr/image/screenshot/asso_accounts_closing.png',
  'fr/image/screenshot/asso_accounts_reopening.png',
  'fr/image/screenshot/asso_afterOpening.png',
  'fr/image/screenshot/asso_analyticExpenses.png',
  'fr/image/screenshot/asso_balanceSheet.png',
  'fr/image/screenshot/asso_chargesProductsClosing.png',
  'fr/image/screenshot/asso_chargesProducts.png',
  'fr/image/screenshot/asso_drink_expense.png',
  'fr/image/screenshot/asso_ink_expense.png',
  'fr/image/screenshot/asso_renew.png',
  'fr/image/screenshot/bankcard_defferedAccount.png',
  'fr/image/screenshot/budget_amortization.png',
  'fr/image/screenshot/budgetarylines_delete.png',
  'fr/image/screenshot/budgetarylines_infos.png',
  'fr/image/screenshot/budgetarylines_list.png',
  'fr/image/screenshot/budgetarylines_management.png',
  'fr/image/screenshot/budgetarylines_new.png',
  'fr/image/screenshot/budgetarylines_transfer.png',
  'fr/image/screenshot/budget_estimate_context.png',
  'fr/image/screenshot/budget_estimate.png',
  'fr/image/screenshot/budget_historical_data.png',
  'fr/image/screenshot/budget_insert_line.png',
  'fr/image/screenshot/categories_delete.png',
  'fr/image/screenshot/categories_infos.png',
  'fr/image/screenshot/categories_list.png',
  'fr/image/screenshot/categories_management.png',
  'fr/image/screenshot/categories_new.png',
  'fr/image/screenshot/categories_transfer.png',
  'fr/image/screenshot/credit_amortization.png',
  'fr/image/screenshot/credit_simulation.png',
  'fr/image/screenshot/datamanagement_history_create.png',
  'fr/image/screenshot/datamanagement_history_line.png',
  'fr/image/screenshot/home.png',
  'fr/image/screenshot/planned_transactions_calendar.png',
  'fr/image/screenshot/planned_transactions_context.png',
  'fr/image/screenshot/planned_transactions_delete.png',
  'fr/image/screenshot/planned_transactions_display_custom.png',
  'fr/image/screenshot/planned_transactions_display.png',
  'fr/image/screenshot/planned_transactions_form.png',
  'fr/image/screenshot/planned_transactions_frequency_custom.png',
  'fr/image/screenshot/planned_transactions_list_comments.png',
  'fr/image/screenshot/planned_transactions_list.png',
  'fr/image/screenshot/QIF_export.png',
  'fr/image/screenshot/QIF_import_files.png',
  'fr/image/screenshot/QIF_import_files_setup.png',
  'fr/image/screenshot/reconciliation_infos.png',
  'fr/image/screenshot/reconciliation_list.png',
  'fr/image/screenshot/reportcreation_datas_accounts.png',
  'fr/image/screenshot/reportcreation_datas_amounts.png',
  'fr/image/screenshot/reportcreation_datas_budgetlines.png',
  'fr/image/screenshot/reportcreation_datas_categories.png',
  'fr/image/screenshot/reportcreation_datas_dates.png',
  'fr/image/screenshot/reportcreation_datas_financialyear.png',
  'fr/image/screenshot/reportcreation_datas_misc.png',
  'fr/image/screenshot/reportcreation_datas_modes.png',
  'fr/image/screenshot/reportcreation_datas_multiplesAmounts.png',
  'fr/image/screenshot/reportcreation_datas_multiplesText.png',
  'fr/image/screenshot/reportcreation_datas.png',
  'fr/image/screenshot/reportcreation_datas_text.png',
  'fr/image/screenshot/reportcreation_datas_thirdparts.png',
  'fr/image/screenshot/reportcreation_datas_transfers.png',
  'fr/image/screenshot/reportcreation_display_currencies.png',
  'fr/image/screenshot/reportcreation_display_main.png',
  'fr/image/screenshot/reportcreation_display_titles.png',
  'fr/image/screenshot/reportcreation_display_transactions.png',
  'fr/image/screenshot/reportcreation_new.png',
  'fr/image/screenshot/reportcreation_organisation_grouping.png',
  'fr/image/screenshot/reportcreation_organisation_separation.png',
  'fr/image/screenshot/reports_display.png',
  'fr/image/screenshot/setup_adresses.png',
  'fr/image/screenshot/setup_bank.png',
  'fr/image/screenshot/setup_budget_data1.png',
  'fr/image/screenshot/setup_budget_dataBank.png',
  'fr/image/screenshot/setup_budget_dataCash.png',
  'fr/image/screenshot/setup_budget_dataLiability.png',
  'fr/image/screenshot/setup_budget_general.png',
  'fr/image/screenshot/setup_currencies.png',
  'fr/image/screenshot/setup_enterHelp.png',
  'fr/image/screenshot/setup_exchangerate.png',
  'fr/image/screenshot/setup_files.png',
  'fr/image/screenshot/setup_financialyear.png',
  'fr/image/screenshot/setup_fonts_logo.png',
  'fr/image/screenshot/setup_formBehaviour.png',
  'fr/image/screenshot/setup_history.png',
  'fr/image/screenshot/setup_home.png',
  'fr/image/screenshot/setup_importLinks.png',
  'fr/image/screenshot/setup_import.png',
  'fr/image/screenshot/setup_listBehaviour.png',
  'fr/image/screenshot/setup_listCells.png',
  'fr/image/screenshot/setup_messages_alerts.png',
  'fr/image/screenshot/setup_messagesDelete.png',
  'fr/image/screenshot/setup_modes.png',
  'fr/image/screenshot/setup_plannedtransactions.png',
  'fr/image/screenshot/setup_programs.png',
  'fr/image/screenshot/setup_reconciliation.png',
  'fr/image/screenshot/setup_reconciliation_sort.png',
  'fr/image/screenshot/setup_sections.png',
  'fr/image/screenshot/setup_thirdCategories.png',
  'fr/image/screenshot/setup_toolbar.png',
  'fr/image/screenshot/setup_transactions_form.png',
  'fr/image/screenshot/start_account_choice.png',
  'fr/image/screenshot/start_file_create.png',
  'fr/image/screenshot/thirdparties_delete.png',
  'fr/image/screenshot/thirdparties_infos.png',
  'fr/image/screenshot/thirdparties_list.png',
  'fr/image/screenshot/thirdparties_new.png',
  'fr/image/screenshot/transactions_breakdown_complete.png',
  'fr/image/screenshot/transactions_breakdown_confirm.png',
  'fr/image/screenshot/transactions_breakdown_end.png',
  'fr/image/screenshot/transactions_breakdown_oneLine.png',
  'fr/image/screenshot/transactions_breakdown.png',
  'fr/image/screenshot/transactions_breakdown_sub1.png',
  'fr/image/screenshot/transactions_breakdown_sub2.png',
  'fr/image/screenshot/transactions_breakdown_sub3.png',
  'fr/image/screenshot/transactions_calendar.png',
  'fr/image/screenshot/transactions_changeRate.png',
  'fr/image/screenshot/transactions_contextMenu.png',
  'fr/image/screenshot/transactions_form.png',
  'fr/image/screenshot/transactions_list.png',
  ],
  install_dir : 'share/doc/grisbi/fr/image/screenshot'
  )

install_data(
  [
  'en/quickstart.html',
  'en/translation.html',
  'en/grisbi-manuel.html',
  'en/topic.dat',
  'en/next_motif.gif',
  'en/previous_motif.gif',
  'en/contents_motif.gif',
  ],
  install_dir : 'share/doc/grisbi/en'
  )


