SUBDIRS = flags

grisbi_pixmapsdir = $(datadir)/pixmaps/$(PACKAGE)

grisbi_pixmaps_DATA = \
	ac-asset-32.png \
	ac-bank-32.png \
	ac-bank-48.png \
	ac-cash-32.png \
	ac-home-32.png \
	ac-liability-16.png \
	ac-liability-24.png \
	ac-liability-32.png \
	amount-32.png \
	archive-16.png \
	archive-24.png \
	archive-32.png \
	archive-48.png \
	arrow-down.svg \
	arrow-left.svg \
	arrow-right.svg \
	arrow-up.svg \
	balance_estimate-32.png \
	banks-32.png \
	budgetary_lines-32.png \
	bug-16.png \
	bug-48.png \
	categories-32.png \
	categories-48.png \
	comments-24.png \
	currencies-32.png \
	delete-32.png \
	export-16.png \
	export-48.png \
	export-archive-16.png \
	export-archive-48.png \
	files-32.png \
	files-48.png \
	financial-years-32.png \
	fonts-32.png \
	form-32.png \
	generalities-32.png \
	graph-histo-24.png \
	graph-line-24.png \
	graph-sectors-24.png \
	grille-16.png \
	grisbi-logo.png \
	grisbi-48.png \
	grisbi.svg \
	import-16.png \
	import-32.png \
	import-48.png \
	importlg.png \
	new-categ-16.png \
	new-categ-24.png \
	new-file-16.png \
	new-file-24.png \
	new-file-32.png \
	new-file-48.png \
	new-ib-16.png \
	new-ib-24.png \
	new-payee-16.png \
	new-payee-24.png \
	new-report-16.png \
	new-report-24.png \
	new-scheduled-24.png \
	new-sub-categ-24.png \
	new-sub-ib-24.png \
	new-transaction-16.png \
	new-transaction-24.png \
	organization-32.png \
	payees-32.png \
	payees-48.png \
	payees-manage-16.png \
	payees-manage-24.png \
	payment-32.png \
	reconat-48.png \
	reconciliation-24.png \
	reconciliation-32.png \
	reports-32.png \
	scheduler-32.png \
	text-32.png \
	title-32.png \
	toolbar-32.png \
	transaction-list-32.png \
	transdisplay-32.png \
	transfer-32.png \
	warnings-32.png \
	window-new-16.png

grisbi_iconsdir = $(datadir)/icons/hicolor/scalable/apps
grisbi_icons_DATA = grisbi.svg

EXTRA_DIST = $(grisbi_pixmaps_DATA) $(grisbi_icons_DATA)

